[package]
name = "misskey-rs"
version = "0.0.0"
authors = ["silverscat_3 <silverscat_3@mail.sc3.fun>"]
edition = "2018"
description = ""
repository = "https://github.com/silverscat-3/misskey-rs"
license = "MIT or APACHE-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
